fix overflow issues

--- a/css/files.css
+++ b/css/files.css
@@ -31,6 +31,7 @@ main > ul > li > ul {
 
 li > ul > li {
 	margin: 0;
+	width: 100%;
 	border-left: 1px solid rgba(0, 0, 0, 0.5);
 }
 
